[package]
name = "wasmboy-plugin-hqx"
version = "0.1.0"
authors = ["Aaron Turner <aaron@aaronthedev.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
clippy = {version = "*", optional = true}
hqx = { git = "https://github.com/CryZe/wasmboy-rs" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

# Adding Wasm bindgen with serde support
[dependencies.wasm-bindgen]
version = "^0.2"
default-features = false
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
