[package]
name = "wasmboypluginhqx"
version = "1.0.0"
authors = ["Aaron Turner <aaron@aaronthedev.com>"]
edition = "2018"

[lib]
name = "wasmboypluginhqx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clippy = {version = "*", optional = true}
wasm-bindgen = "0.2"
hqx = { git = "https://github.com/CryZe/wasmboy-rs" }

